2016-12-07  Ryan Haddad  <ryanhaddad@apple.com>

        Marking two compositing tests as failing.
        https://bugs.webkit.org/show_bug.cgi?id=165530

        Unreviewed test gardening.

        * platform/mac-wk1/TestExpectations:
        * platform/mac/TestExpectations:

2016-12-07  Zalan Bujtas  <zalan@apple.com>

        ASSERTION FAILED: count >= 1 in WebCore::RenderMultiColumnSet::columnCount
        https://bugs.webkit.org/show_bug.cgi?id=136365
        <rdar://problem/27686727>

        Reviewed by Simon Fraser.

        * fast/multicol/assert-on-column-count-when-zoomed-in-expected.txt: Added.
        * fast/multicol/assert-on-column-count-when-zoomed-in.html: Added.

2016-12-07  Ryosuke Niwa  <rniwa@webkit.org>

        document.caretRangeFromPoint doesn't retarget the resultant Range correctly.
        https://bugs.webkit.org/show_bug.cgi?id=165146

        Reviewed by Sam Weinig.

        Added a regression test for caretRangeFromPoint retargeting the result.

        * fast/shadow-dom/caret-range-from-point-in-shadow-tree-expected.txt: Added.
        * fast/shadow-dom/caret-range-from-point-in-shadow-tree.html: Added.

2016-12-07  Antoine Quint  <graouts@apple.com>

        [Modern Media Controls] Entering fullscreen and returning to inline shows fullscreen controls
        https://bugs.webkit.org/show_bug.cgi?id=165536

        Reviewed by Tim Horton.

        Add a new test that checks we're using the right media controls presentation as we enter and exit fullscreen.

        * media/modern-media-controls/media-controller/media-controller-inline-to-fullscreen-to-inline-expected.txt: Added.
        * media/modern-media-controls/media-controller/media-controller-inline-to-fullscreen-to-inline.html: Added.

2016-12-07  Wenson Hsieh  <wenson_hsieh@apple.com>

        Scroll position jumps to the origin when scrolling without momentum at the end of a scroll snapping container
        https://bugs.webkit.org/show_bug.cgi?id=165474