@@ -2,4 +2,4 @@ PASS Passes if we did not debug assert.
 PASS successfullyParsed is true
 
 TEST COMPLETE
-foo 
+
