@@ -1,3 +1,14 @@
+2016-12-07  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Rebaseline tests after r209486. Also updated media-shadow-manipulation.html now that range is null.
+
+        * fast/shadow-dom/color-input-element-shadow-manipulation-expected.txt:
+        * fast/shadow-dom/file-input-element-shadow-manipulation-expected.txt:
+        * fast/shadow-dom/media-shadow-manipulation-expected.txt:
+        * fast/shadow-dom/media-shadow-manipulation.html:
+        * fast/shadow-dom/range-input-element-shadow-manipulation-expected.txt:
+        * fast/shadow-dom/textarea-shadow-manipulation-expected.txt:
+
 2016-12-07  Ryan Haddad  <ryanhaddad@apple.com>
 
         Marking two compositing tests as failing.
